--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,19 @@
 <resources>
     <string name="app_name">SOPTHub</string>
+    <string name="id">아이디</string>
+    <string name="sopt_hub">SOPTHub</string>
+    <string name="pw">비밀번호</string>
+    <string name="id_input">아이디를 입력해주세요</string>
+    <string name="pw_input">비밀번호를 입력해주세요</string>
+    <string name="login">로그인</string>
+    <string name="sign_up">회원가입</string>
+    <string name="name">이름</string>
+    <string name="name_input">이름을 입력해주세요</string>
+    <string name="sign_up_finish">회원가입 완료</string>
+    <string name="age">나이</string>
+    <string name="mbti">MBTI</string>
+    <string name="kang">강수현</string>
+    <string name="age23">23</string>
+    <string name="intp">INTP</string>
+    <string name="my_story">안녕하세요! 반갑습니다.</string>
 </resources>
