--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,5 @@
     <string name="my_story">안녕하세요! 반갑습니다.</string>
     <string name="follower">팔로워\n목록</string>
     <string name="repository">레포지토리\n목록</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="detail_title">상세 소개</string>
 </resources>
