[MOD] modify ItemFollower, ItemRepository UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="camera">카메라</string>
     <string name="onpyeong">onpyeong</string>
     <string name="short_intro">왕초보 개발자 강수현</string>
+    <string name="github">GitHub</string>
 </resources>
