[CHORE] add values

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
     <string name="onpyeong">onpyeong</string>
     <string name="short_intro">왕초보 개발자 강수현</string>
     <string name="github">GitHub</string>
+    <string name="prepare">준비중입니다</string>
+    <string name="test">안녕하세요! 반갑습니다안녕하세요! 반갑습니다안녕하세요! 반갑습니다안녕하세요! 반갑습니다안녕하세요! 반갑습니다안녕하세요! 반갑습니다</string>
 </resources>
