--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,7 @@
     <string name="short_intro">왕초보 개발자 강수현</string>
     <string name="github">GitHub</string>
     <string name="prepare">준비중입니다</string>
-    <string name="test">안녕하세요! 반갑습니다안녕하세요! 반갑습니다안녕하세요! 반갑습니다안녕하세요! 반갑습니다안녕하세요! 반갑습니다안녕하세요! 반갑습니다</string>
+    <string name="test">안녕하세요! 반갑습니다안녕하세요! 반갑습니다</string>
+    <string name="guide">사진을 첨부해주세요</string>
+    <string name="attach">첨부하기</string>
 </resources>
